--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,6 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Home" description="My home page">
-	Index
+<Layout title="About" description="My about page">
+	About
 </Layout>
