--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
+import Footer from "../components/Footer.astro";
 import Head from "./Head.astro";
+import Nav from "../components/Nav.astro";
 
 const { description, title } = Astro.props;
 ---
@@ -7,6 +9,8 @@ const { description, title } = Astro.props;
 <html lang="en">
   <Head {title} {description} />
 	<body>
+    <Nav />
 		<slot />
+    <Footer />
 	</body>
 </html>
