--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,9 @@ const { description, title } = Astro.props;
   <Head {title} {description} />
 	<body>
     <Nav />
-		<slot />
+    <main>
+      <slot />
+    </main>
     <Footer />
 	</body>
 </html>
