--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<footer class="absolute bottom-0 left-1/2 -translate-x-1/2 pb-8">
+<footer class="fixed left-0 right-0 bottom-0 py-4 bg-white w-full text-center">
   <small>Copyright &copy;
     <span id="copyright" />
     All rights reserved
