--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -6,7 +6,7 @@ import Layout from "../../layouts/Layout.astro";
 <Layout title="Posts">
   <ul>
     <li>
-      <a href="./post-1/">Post 1</a>
+      <a href="/posts/post-1/">Post 1</a>
     </li>
     <Link href="mailto:d2vinmusic@gmail.com" text="Email me" style="primary" />
   </ul>
