--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<footer class="fixed left-0 right-0 bottom-0 py-4 bg-white w-full text-center">
+<footer class="fixed left-0 right-0 bottom-0 py-4 bg-neutral-100 w-full text-center">
   <small>Copyright &copy;
     <span id="copyright" />
     All rights reserved
