--- a/src/components/RelatedPosts.astro
+++ b/src/components/RelatedPosts.astro
@@ -5,7 +5,7 @@ const { relatedPosts } = Astro.props;
 ---
 
 {
-  relatedPosts.map((post) => (
+  relatedPosts.map((post: any) => (
     <div class="post">
       <h3 class="h4">
         <a href={post.url}>{post.frontmatter.title}</a>
