--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -22,7 +22,7 @@ const { title, date, author, image, description, category } = frontmatter;
       height="250"
       format="webp"
       quality={80}
-      class="object-cover w-full h-48"
+      class="object-cover rounded-md w-64 h-48"
     />
   </a>
   <div>
