--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ const { description, title } = Astro.props;
   <Head {title} {description} />
 	<body>
     <Nav />
-    <main class="p-8">
+    <main class="p-8 min-h-screen">
       <slot />
     </main>
     <Footer />
