--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const formattedPosts = formatPosts(allPosts, { limit: 1 });
 
 <Layout title="Home" description="My home page">
   <div class="flex space-x-3">
-  <h1 class="text-2xl">prodven</h1>
+  <h1 class="text-2xl">padme</h1>
   </div>
   <Link href="/about" style="secondary" text="👋 About Me" />
 	<section class="container" aria-label="New Posts">
